--- a/leier_leieren.kv
+++ b/leier_leieren.kv
@@ -1,11 +1,13 @@
-#:import CircularAvatarImage main_v_KVfile.CircularAvatarImage
-#:import StoryCreator main_v_KVfile.StoryCreator
-#:import PostCard main_v_KVfile.PostCard
+#:import CircularAvatarImage main.CircularAvatarImage
+#:import StoryCreator main.StoryCreator
+#:import PostCard main.PostCard
 
 <HomePage>:
     orientation: 'vertical'
+    
     MDBoxLayout:
         orientation: 'vertical'
+        md_bg_color: 'white' #test
         # App Bar
         MDBoxLayout:
             padding: '15dp'
@@ -23,20 +25,21 @@
 
             # MDIconButton:
                 # icon: 'facebook-messenger'
-
+        #Body
         MDBoxLayout:
+            md_bg_color: 'white' #test
             ScrollView:
                 bar_width: 0
-
+                
                 MDBoxLayout:
                     adaptive_height: True
-
+                   
                     MDBoxLayout:
                         orientation: 'vertical'
                         adaptive_height: True
                         id: timeline
 
-                        # Stories
+                        # Stories - avatars
                         ScrollView:
                             size_hint_y: None
                             height: 110
@@ -47,64 +50,66 @@
                                 spacing: 5
                                 padding: 5
 
-                                # Story Creator
-                                StoryCreator:
-                                    size_hint: None, None
-                                    size: 62, 100
-                                    padding: 5
-                                    spacing: 5
+                                # # Story Creator
+                                # StoryCreator:
+                                #     size_hint: None, None
+                                #     size: 62, 100
+                                #     padding: 5
+                                #     spacing: 5
 
-                                    MDRelativeLayout:
-                                        size_hint: None, None
-                                        size: 60, 100
+                                #     MDRelativeLayout:
+                                #         size_hint: None, None
+                                #         size: 60, 100
 
-                                        Circle:
-                                            radius: [50, ]
-                                            size: 60, 60
-                                            md_bg_color: 1,1,1,1
+                                #         Circle:
+                                #             radius: [50, ]
+                                #             size: 60, 60
+                                #             md_bg_color: 1,0,0,1
 
-                                        Circle:
-                                            radius: [50, ]
-                                            size: 55, 55
-                                            md_bg_color: 1,1,1,1
+                                #         Circle:
+                                #             radius: [50, ]
+                                #             size: 55, 55
+                                #             md_bg_color: 1,1,1,1
 
-                                        Button:
-                                            text: 'Hit me !!'
-                                            background_normal: 'assets/plus_icon.png'
-                                            background_down: 'assets/plus_icon.png'
-                                            #size_hint: .3, .3
-                                            #pos_hint: {"x":0.35, "y":0.3}
-                                            on_press: root.say_hello()
+                                #         FitImage:
+                                #             source: root.profile_picture
+                                #             size_hint: None, None
+                                #             size: 53,53
+                                #             radius: [53]
+                                #             pos_hint: {"center_x":0.5, "center_y":0.6}
+                                #             #pos_hint: None, None
 
-                                        # FitImage:
-                                        #     source: root.profile_picture
-                                        #     size_hint: None, None
-                                        #     size: 53,53
-                                        #     radius: [53]
-                                        #     pos_hint: {"center_x":0.5, "center_y":0.6}
+                                #         # Button:
+                                #         #     #text: 'Hit me !!'
+                                #         #     background_normal: 'https://avatars.githubusercontent.com/u/89080192?v=4'
+                                #         #     background_down: root.profile_picture
+                                #         #     size_hint: 53, 53
+                                #         #     radius: [53]
+                                #         #     pos_hint: {"x":0.35, "y":0.3}
+                                #         #     on_press: root.say_hello()
 
-                                        Circle:
-                                            size_hint: None, None
-                                            size: 17, 17
-                                            md_bg_color: 1,1,1,1
-                                            radius: [17, ]
-                                            pos_hint: {"center_x":0.8, "center_y":0.4}
+                                #         # Circle:
+                                #         #     size_hint: None, None
+                                #         #     size: 17, 17
+                                #         #     md_bg_color: 1,1,1,1
+                                #         #     radius: [17, ]
+                                #         #     pos_hint: {"center_x":0.8, "center_y":0.4}
 
-                                        FitImage:
-                                            size_hint: None, None
-                                            source: 'assets/plus_icon.png'
-                                            size: 15, 15
-                                            md_bg_color: 0,0,1,1
-                                            radius: [15, ]
-                                            pos_hint: {"center_x":0.8, "center_y":0.4}
+                                #         # FitImage:
+                                #         #     size_hint: None, None
+                                #         #     source: 'assets/plus_icon.png'
+                                #         #     size: 15, 15
+                                #         #     md_bg_color: 0,0,1,1
+                                #         #     radius: [15, ]
+                                #         #     pos_hint: {"center_x":0.8, "center_y":0.4}
 
-                                        MDLabel:
-                                            text: "Your Story"
-                                            halign: 'center'
-                                            pos_hint: {"center_x":0.5, "center_y":0.2}
-                                            font_size: 11
-                                            theme_text_color: 'Custom'
-                                            text_color: 0, 0, 0, 1
+                                #         MDLabel:
+                                #             text: "Your Story"
+                                #             halign: 'center'
+                                #             pos_hint: {"center_x":0.5, "center_y":0.2}
+                                #             font_size: 11
+                                #             theme_text_color: 'Custom'
+                                #             text_color: 0, 0, 0, 1
 
                                 MDBoxLayout:
                                     adaptive_width: True
@@ -113,6 +118,7 @@
                                     id: stories
                         MDSeparator:
 
+        #bar at the bottom
         MDBoxLayout:
             adaptive_height: True
             spacing: 10
@@ -271,3 +277,4 @@
 <HalfOpacityLabel@MyLabel>:
     theme_text_color: 'Custom'
     text_color: 0,0,0,0.5
+    
