--- a/test.kv
+++ b/test.kv
@@ -55,7 +55,7 @@ WindowManager:
 
 			MDBoxLayout:
 				MDLabel:
-					text:"Welcome to léier léieren"
+					text:"Welcome to leier leieren"
                     halign: "center"
 					font_style:"H5"
 
